<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LabTestDetailsActivity">


    <Button
        android:id="@+id/buttonLDGoBack"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/colorGrey"
        android:text="@string/LTD_back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toEndOf="@+id/buttonLDAddToCart" />

    <Button
        android:id="@+id/buttonLDAddToCart"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/colorRed"
        android:text="@string/LTD_add_to_cart"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLDPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/LTD_lab_test_and_packages"
        android:textColor="@color/blue_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLDName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/logo205"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLDName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/LTD_deliver_location_ha_noi"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewLDTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LTD_textview"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLDAddToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLDTextMultiLine" />

    <EditText
        android:id="@+id/editTextLDTextMultiLine"
        android:layout_width="290dp"
        android:layout_height="372dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:text="@string/LTD_hi_nhello"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLDPackageName"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>